Remove useless